--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
 
-  <link rel="stylesheet" href="../static/assets/css/sl_styles.css">
+  <link rel="stylesheet" href="static/assets/css/sl_styles.css">
   
   <link rel="icon" href="data:,"> <!-- to avoid favicon error -->
 
@@ -153,7 +153,7 @@
 
   <!-- <script type="text/javascript" src="../static/js/app_data_table.js"> </script> -->
 
-  <script type="text/javascript" src="../static/js/app_barChartRace.js"> </script>
+  <script type="text/javascript" src="static/js/app_barChartRace.js"> </script>
 
 </body>
 
