--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <a class="dropdown-item" href="templates/chart1.html">Gender & Body Composition</a>
               <a class="dropdown-item" href="templates/chart2.html">Medals VS GDP</a>
               <a class="dropdown-item" href="templates/chart3.html">Medals World View - Seasons</a>
+              <a class="dropdown-item" href="templates/test.html">Test</a>
               <!-- <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a> -->
             </div>
           <li class="nav-item">
