--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="templates/chart0.html">Medals Timeline</a>
               <a class="dropdown-item" href="templates/chart1.html">Gender & Body Composition</a>
-<!--               <a class="dropdown-item" href="templates/chart2.html">Medals VS GDP</a> -->
-<!--               <a class="dropdown-item" href="templates/chart3.html">Medals World View - Seasons</a> -->
+              <a class="dropdown-item" href="templates/chart2.html">Medals VS GDP</a>
+              <a class="dropdown-item" href="templates/chart3.html">Medals World View - Seasons</a>
               <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a>
             </div>
           <li class="nav-item">
