--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="navbar-nav mr-auto"></ul>
           <ul class="nav navbar-nav navbar-right-custom">
           <li class="nav-item">
-            <a class="nav-link" href="data.html">DATA</a>
+            <a class="nav-link" href="templates/data.html">DATA</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Visualizations</a>
